--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,24 @@
 # Repo-specific GitIgnore ----------------------------------------------------------------------------------------------
 *.jpg
+*.jpeg
 *.png
+*.bmp
 *.tif
+*.tiff
 *.heic
 *.JPG
+*.JPEG
 *.PNG
+*.BMP
 *.TIF
+*.TIFF
 *.HEIC
+*.mp4
+*.mov
+*.MOV
+*.avi
+*.data
+*.json
 *.weights
 *.pt
 data/processed
